--- a/next_js/01_Page_Router/page_router/src/styles/global-style.module.css
+++ b/next_js/01_Page_Router/page_router/src/styles/global-style.module.css
@@ -4,7 +4,9 @@
 	display: flex;
 	flex-direction: column;
 	margin: 0 auto;
+	width: 100%;
 	max-width: 600px;
+	min-width: 320px;
 	min-height: 100vh;
 	background: #fff;
 	box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -14,8 +16,8 @@
 	border-bottom: 1px solid #eee;
 }
 .main_header a {
-	height: 50px;
-	line-height: 50px;
+	height: 40px;
+	line-height: 40px;
 	padding: 0.5rem 1rem;
 	font-size: 1.2rem;
 	font-weight: bold;
