Style & Add : search bar UI & search query 전달 및 새로고침 검색어 유지 - searchable-layout : search input stylingg

--- a/next_js/01_Page_Router/page_router/src/styles/globals.css
+++ b/next_js/01_Page_Router/page_router/src/styles/globals.css
@@ -130,6 +130,16 @@ table {
 	border-spacing: 0;
 }
 
+button,
+input,
+select,
+option {
+	border: none;
+	outline: none;
+	background: none;
+	display: inline-block;
+}
+
 a {
 	display: block;
 	text-decoration: none;
