Style :상세 페이지 ui

--- a/next_js/01_Page_Router/page_router/src/styles/book-item.module.css
+++ b/next_js/01_Page_Router/page_router/src/styles/book-item.module.css
@@ -5,6 +5,7 @@
 	gap: 1.5em;
 	display: flex;
 	padding: 1rem 0.5rem;
+	border-radius: 0.2rem;
 }
 .book_item_card:not(:last-child) {
 	border-bottom: 1px solid #efefef;
