불필요 콘솔 삭제

--- a/next_js/01_Page_Router/page_router/src/styles/index.module.css
+++ b/next_js/01_Page_Router/page_router/src/styles/index.module.css
@@ -11,3 +11,10 @@
 	font-size: 1.2rem;
 	font-weight: bold;
 }
+
+.no_list {
+	text-align: center;
+	padding: 1rem 0;
+	font-size: 1.2rem;
+	font-weight: bold;
+}
