Fix : build시 생긴 오류 수정 1) _app.tsx : NextPageWithLayout타입 선언   - {} 선언 시, 0, 빈문자열, symble등 null이나 undefined가 아닌 모든 값을 허용하게되어 예상하지 못한 동작 가능성   - object로 선언
2) module css 파일 안에 :root 선언 문제 :
    - module css 파일 안에서는 global selector 사용 불가 모듈 자체가 local scope안에 동작하도 설계되어 있어 일반 global.css안으로 옮김

--- a/next_js/01_Page_Router/page_router/src/styles/globals.css
+++ b/next_js/01_Page_Router/page_router/src/styles/globals.css
@@ -1,5 +1,16 @@
 @charset 'utf-8';
 
+:root {
+	--primary-color: #7def89;
+	--primary-color10: #c5f3c9;
+	--primary-color50: #2ac039;
+	--primary-color90: #086a11;
+	--secondary-color: #ffb950;
+	--secondary-color10: #fcd395;
+	--secondary-color50: #dc901e;
+	--secondary-color90: #8c5606;
+}
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
