--- a/next_js/02_App_router/app_router/src/app/globals.css
+++ b/next_js/02_App_router/app_router/src/app/globals.css
@@ -1,12 +1,40 @@
+* {
+	box-sizing: border-box;
+}
+
 html,
 body {
-  margin: 0px;
-  padding: 0px;
-  background-color: rgb(250, 250, 250);
+	margin: 0px;
+	padding: 0px;
+	background-color: rgb(250, 250, 250);
 }
 
 a {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+	color: inherit;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+ul,
+ol,
+li {
+	list-style: none;
+	padding-left: 0;
+}
+
+button {
+	background: none;
+	outline: none;
+	border: none;
+	padding: 0;
+	cursor: pointer;
+	text-align: center;
+	color: inherit;
+}
+
+input,
+textarea {
+	border: none;
+	background: none;
+	padding: 0.5em;
 }
