--- a/next_js/02_App_router/app_router/src/components/review.module.css
+++ b/next_js/02_App_router/app_router/src/components/review.module.css
@@ -63,9 +63,10 @@
 	font-size: 12px;
 	color: #aaa;
 }
-.review_item_info button {
+.review_item_button button {
 	font-size: 12px;
 }
-.review_item_info button:hover {
+.review_item_button button:hover {
 	color: tomato;
+	font-weight: bold;
 }
