--- a/next_js/02_App_router/app_router/src/components/modal/modal.module.css
+++ b/next_js/02_App_router/app_router/src/components/modal/modal.module.css
@@ -1,1 +1,12 @@
 @charset "utf-8";
+.modal_con {
+	width: 80%;
+	max-width: 500px;
+	margin-top: 20px;
+	border-radius: 0.2rem;
+	border: none;
+}
+
+.modal_con::backdrop {
+	background: rgba(0, 0, 0, 0.7);
+}
