--- a/next_js/02_App_router/app_router/src/app/book/[id]/page.module.css
+++ b/next_js/02_App_router/app_router/src/app/book/[id]/page.module.css
@@ -24,7 +24,7 @@
 .cover_img_container::before {
 	position: absolute;
 	top: 0px;
-	left: 0p;
+	left: 0px;
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.7);
@@ -33,7 +33,8 @@
 
 .cover_img_container > img {
 	z-index: 1;
-	max-height: 350px;
+	width: 70%;
+	max-height: 100%;
 	height: 100%;
 }
 
