--- a/next_js/z_com/src/app/normalize.css
+++ b/next_js/z_com/src/app/normalize.css
@@ -40,7 +40,7 @@ main {
 
 h1 {
 	font-size: 2em;
-	margin: 0.67em 0;
+	margin: 0;
 }
 
 /* Grouping content
@@ -381,4 +381,14 @@ ol,
 ul {
 	list-style: none;
 	padding-left: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin: 0;
+	padding: 0;
 }
