--- a/next_js/z_com/src/app/(beforeLogin)/@bf_modal/bf_modal.module.css
+++ b/next_js/z_com/src/app/(beforeLogin)/@bf_modal/bf_modal.module.css
@@ -28,6 +28,9 @@
 	top: 1.3em;
 	left: 1em;
 }
+.modal_close_btn:hover {
+	color: var(--main-color);
+}
 .modal_close_btn svg {
 	font-size: 1.5em;
 }
@@ -56,6 +59,13 @@
 	border: 1px solid #ddd;
 	width: 100%;
 	padding: 2em 1em 1em;
+}
+
+.modal_input:focus {
+	border-color: var(--main-color);
+}
+.modal_input:focus ~ label {
+	color: var(--main-color);
 }
 .modal_message {
 }
