--- a/next_js/z_com/src/app/(beforeLogin)/@bf_modal/bf_modal.module.css
+++ b/next_js/z_com/src/app/(beforeLogin)/@bf_modal/bf_modal.module.css
@@ -17,6 +17,8 @@
 	width: 50%;
 	max-width: 620px;
 	padding: 2em 3.5em;
+	height: 95%;
+	max-height: 550px;
 	display: flex;
 	flex-direction: column;
 	border-radius: 0.5rem;
@@ -40,13 +42,19 @@
 }
 .modal_header h3 {
 	font-size: 2em;
-	padding: 1em 0;
+	padding: 1em 0 0;
 }
-
+.modal_body {
+	flex-direction: column;
+	display: flex;
+	justify-content: space-between;
+	height: 100%;
+}
 .modal_input_con {
 	position: relative;
 	margin: 1em 0;
 }
+
 .modal_label {
 	position: absolute;
 	top: 0.8em;
@@ -68,13 +76,16 @@
 	color: var(--main-color);
 }
 .modal_message {
+	font-size: 12px;
+	color: var(--main-color);
+	padding: 0 0.5em;
 }
 .modal_footer {
+	justify-self: self-end;
 }
 .modal_action_btn {
 	width: 100%;
 	background-color: #ddd;
 	padding: 1.2em 2em 1em;
 	border-radius: 10em;
-	margin-top: 5em;
 }
