--- a/next_js/z_com/src/app/(afterLogin)/layout.module.css
+++ b/next_js/z_com/src/app/(afterLogin)/layout.module.css
@@ -45,29 +45,7 @@
 	width: 18em;
 	background-color: aquamarine;
 }
-.search_form {
-	position: fixed;
+.rg_search_con {
+	margin-bottom: 4em;
 	width: inherit;
-	top: 0.5rem;
-	background-color: #efefef;
-	padding: 0.7em 1em;
-	border-radius: 10em;
-}
-.search_input {
-	width: 100%;
-	display: flex;
-	align-items: center;
-	gap: 0.3em;
-	color: #888;
-}
-.search_input label {
-	display: inline-block;
-	margin-top: 0.1em;
-}
-.search_input input[type='text'] {
-	background: none;
-	flex: auto;
-}
-.search_input input[type='text']:focus {
-	border-bottom: 1px solid #ddd;
 }
