Style: trend section + 배경 color 일괄 변경

--- a/next_js/z_com/src/app/(afterLogin)/_components/Nav/nav.module.css
+++ b/next_js/z_com/src/app/(afterLogin)/_components/Nav/nav.module.css
@@ -17,7 +17,7 @@
 	border-radius: 10em;
 }
 .fixed_menu_nav_elem a:hover {
-	background: #efefef;
+	background: #f5f5f5;
 }
 .fixed_menu_nav_elem a svg {
 	font-size: 1.2em;
