--- a/next_js/z_com/src/app/(afterLogin)/_components/SearchBar/searchbar.module.css
+++ b/next_js/z_com/src/app/(afterLogin)/_components/SearchBar/searchbar.module.css
@@ -4,7 +4,7 @@
 	position: fixed;
 	width: inherit;
 	top: 0.5rem;
-	background-color: #efefef;
+	background-color: #f5f5f5;
 	padding: 0.7em 1em;
 	border-radius: 10em;
 }
