--- a/next_js/z_com/src/app/(afterLogin)/_components/Trend/trend.module.css
+++ b/next_js/z_com/src/app/(afterLogin)/_components/Trend/trend.module.css
@@ -1,1 +1,20 @@
 @charset "utf-8";
+
+.trend_elem {
+	display: block;
+	padding: 0.5em 0.8em;
+}
+.trend_elem:hover {
+	background-color: #ededed;
+}
+.trend_sub_title,
+.trend_count {
+	color: #999;
+	font-size: 0.8em;
+	line-height: 1.3;
+}
+.trend_title {
+}
+.trend_count {
+	padding-top: 0.1em;
+}
