--- a/next_js/z_com/src/app/(afterLogin)/_components/TrendSection/trendSection.module.css
+++ b/next_js/z_com/src/app/(afterLogin)/_components/TrendSection/trendSection.module.css
@@ -1,1 +1,16 @@
 @charset "utf-8";
+
+.trend_wrap {
+	width: inherit;
+	border-radius: 0.8rem;
+	background: #f5f5f5;
+}
+.trend_con {
+}
+.trend_title {
+	font-size: 1.3em;
+	padding: 0.8em 0.6em 0;
+}
+.trend_list {
+	padding: 0.5em 0 1em;
+}
