[Add] : /home contects 상단 fixed 메뉴 - useContext사용    - context.Provider 방식은 사용되지 않음    - context가 provider 역할을 바로 수행함

--- a/next_js/z_com/src/app/(afterLogin)/layout.module.css
+++ b/next_js/z_com/src/app/(afterLogin)/layout.module.css
@@ -35,10 +35,12 @@
 	height: 100%;
 	width: 55em;
 	gap: 1em;
+	min-height: 100vh;
 }
 
 .main {
 	flex: auto;
+	height: 100%;
 }
 .rg_section {
 	width: 18em;
@@ -56,5 +58,5 @@
 }
 .rg_follow_title {
 	font-size: 1.3em;
-	padding: 0.8em 0.6em 0;
+	padding: 0.8em 0.6em 0.5em;
 }
