--- a/next_js/z_com/src/app/(afterLogin)/home/_components/Tab/tab.module.css
+++ b/next_js/z_com/src/app/(afterLogin)/home/_components/Tab/tab.module.css
@@ -20,7 +20,7 @@
 }
 .home_tab li {
 	position: relative;
-	padding: 0.5em 0.5em 0.8em;
+	padding: 0.8em 0.5em;
 	text-align: center;
 	display: flex;
 	align-items: center;
@@ -28,11 +28,14 @@
 	font-size: 0.95em;
 	cursor: pointer;
 }
+.home_tab li:hover {
+	background-color: var(--section-active-bg);
+}
 
 .home_tab_indicator {
 	width: 3em;
 	max-width: 50px;
-	height: 2px;
+	height: 2.5px;
 	background: var(--main-color);
 	position: absolute;
 	bottom: 0;
