--- a/next_js/z_com/src/app/(afterLogin)/home/_components/PostForm/postForm.module.css
+++ b/next_js/z_com/src/app/(afterLogin)/home/_components/PostForm/postForm.module.css
@@ -1,1 +1,55 @@
 @charset "utf-8";
+
+.post_form_wrap {
+	width: 100%;
+	padding: 1em;
+}
+.post_form_con {
+	display: flex;
+	align-items: stretch;
+	gap: 0.8em;
+}
+.post_user {
+	text-align: center;
+}
+.post_user img {
+	border-radius: 50%;
+}
+.post_input_con {
+}
+.post_input_con.post_input_text_con {
+	flex: auto;
+}
+
+.post_textarea {
+	width: 100%;
+	border: none;
+	resize: none;
+}
+.post_btn_con {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+.post_btn_con button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0.8em;
+	border-radius: 50%;
+}
+.post_btn_con button:hover {
+	background: var(--section-active-bg);
+}
+.post_btn_con svg {
+	color: var(--main-color);
+}
+.post_submit_btn {
+	width: 10em;
+	display: flex;
+	justify-content: flex-end;
+}
+.post_submit_btn button {
+	width: 100%;
+	min-width: 95px;
+}
