Fix & Style : 스타일링 및 더미데이터로 넣은 new Date() 관련 오류
- new Date()나 Math.random() 같은 경우 서버와 클라이언트간의 값의 차이로 인해 오류가 생김
- 렌더링 될때 값이 정해지도록 변경
- 근데 이거 더미데이터 없애면 챙겨서 지우기

--- a/next_js/z_com/src/app/(afterLogin)/_components/LeftSide/leftSide.module.css
+++ b/next_js/z_com/src/app/(afterLogin)/_components/LeftSide/leftSide.module.css
@@ -8,7 +8,7 @@
 	display: flex;
 	flex-direction: column;
 	margin-left: -0.5em;
-
+	border-right: 1px solid var(--border-color);
 	padding: 0.5em;
 }
 .fixed_menu_top {
