--- a/next_js/z_com/src/app/(afterLogin)/home/_components/Tab/tab.module.css
+++ b/next_js/z_com/src/app/(afterLogin)/home/_components/Tab/tab.module.css
@@ -17,6 +17,7 @@
 	margin: 0;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
+	border-bottom: 1px solid var(--border-color);
 }
 .home_tab li {
 	position: relative;
