--- a/next_js/z_com/src/app/(afterLogin)/_components/Post/post.module.css
+++ b/next_js/z_com/src/app/(afterLogin)/_components/Post/post.module.css
@@ -1,1 +1,49 @@
 @charset "utf-8";
+.post_wrap {
+	display: flex;
+	gap: 0.5em;
+	padding: 1em;
+	max-width: 570px;
+}
+.post_wrap:not(:last-child) {
+	border-bottom: 1px solid var(--border-color);
+}
+.post_user_section {
+}
+.post_user_section a {
+}
+.post_user_section img {
+	border-radius: 50%;
+}
+.post_con_body {
+	flex: auto;
+}
+.post_con_body {
+}
+.post_con_user {
+	display: inline-block;
+	color: var(--sub-text-color);
+}
+.post_con_user:hover {
+	text-decoration: underline;
+}
+.post_con_body .post_con_nickname {
+	color: #000;
+	font-weight: bold;
+}
+.post_con_body .post_con_id {
+}
+.post_con_body .post_con_date {
+}
+
+.post_con_main {
+	margin: 0.5em 0 0.8em;
+}
+.post_con_image_wrap {
+}
+.post_con_image_wrap .post_con_image {
+}
+.post_con_image_wrap .post_con_image img {
+	width: 100%;
+	border-radius: 1rem;
+}
