--- a/next_js/z_com/src/app/(afterLogin)/layout.module.css
+++ b/next_js/z_com/src/app/(afterLogin)/layout.module.css
@@ -13,6 +13,7 @@
 	flex-direction: column;
 	flex-grow: 1;
 }
+
 .lf_section {
 	width: 18em;
 	padding: 0 0.5em;
@@ -34,17 +35,22 @@
 	justify-content: space-between;
 	height: 100%;
 	width: 55em;
-	gap: 1em;
 	min-height: 100vh;
 }
 
 .main {
 	flex: auto;
 	height: 100%;
+	overflow: auto;
 }
+
 .rg_section {
 	width: 18em;
+	flex: auto;
+	border-left: 1px solid var(--border-color);
+	padding-left: 1em;
 }
+
 .rg_search_con {
 	margin-bottom: 4em;
 	width: inherit;
@@ -56,6 +62,7 @@
 	border-radius: 0.8rem;
 	margin-top: 0.8em;
 }
+
 .rg_follow_title {
 	font-size: 1.3em;
 	padding: 0.8em 0.6em 0.5em;
