--- a/next_js/z_com/src/app/globals.css
+++ b/next_js/z_com/src/app/globals.css
@@ -2,6 +2,10 @@
 
 :root {
 	--main-color: #0096ff;
+	--sub-text-color: #aaa;
 	--section-bg: #f5f5f5;
 	--section-active-bg: #ededed;
+	--file-icon-bg: #bde4ff87;
+	--border-color: #efefef;
+	--placeholder-color: #cdcdcd;
 }
