Style : border 표시 위치 변경

--- a/next_js/z_com/src/app/(afterLogin)/home/_components/PostForm/postForm.module.css
+++ b/next_js/z_com/src/app/(afterLogin)/home/_components/PostForm/postForm.module.css
@@ -4,6 +4,7 @@
 	width: 100%;
 	padding: 1em 1em 0.5em;
 	border-bottom: 1px solid var(--border-color);
+	border-right: 1px solid var(--border-color);
 }
 .post_form_con {
 	display: flex;
