--- a/next_js/z_com/src/app/(afterLogin)/_components/Post/post.module.css
+++ b/next_js/z_com/src/app/(afterLogin)/_components/Post/post.module.css
@@ -4,6 +4,7 @@
 	gap: 0.5em;
 	padding: 1em;
 	max-width: 570px;
+	border-right: 1px solid var(--border-color);
 }
 .post_wrap:not(:last-child) {
 	border-bottom: 1px solid var(--border-color);
