Style : action button ui 추가

--- a/next_js/z_com/src/app/globals.css
+++ b/next_js/z_com/src/app/globals.css
@@ -8,4 +8,9 @@
 	--file-icon-bg: #bde4ff87;
 	--border-color: #efefef;
 	--placeholder-color: #cdcdcd;
+	--comment-icon-bg: #bde4ff87;
+	--request-icon-bg: #b7f9c887;
+	--request-icon-txt: #0d9c0e;
+	--hit-icon-bg: #fcb6dbb0;
+	--hit-icon-txt: #be0b69;
 }
